cleaning up the files and added error404 and phone parsing

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
           <div>
             <!--FORM -->
             <div class="content">
-              <form class="w-full max-w-lg" action="/subscribed" method="POST">
+              <form class="w-full max-w-lg" action="/subscriber" method="POST">
                 <div class="flex flex-wrap -mx-3 mb-6">
                   <!--LEFT FILL IN BOX-->
                   <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
