--- a/public/error404.html
+++ b/public/error404.html
@@ -22,7 +22,7 @@
           <p class="mt-2 text-center text-sm leading-5 text-gray-600">
             You can either click 
             <a
-              href="http://localhost:5000/"
+              href="/"
               class="font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150"
             >
               here
