phrases added and fixed node-schedule

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
                       type="text"
                       placeholder="Jane"
                     />
-                    <p class="text-red-500 text-xs italic">Please fill out this field.</p>
+                    <!--<p class="text-red-500 text-xs italic">Please fill out this field.</p>-->
                   </div>
 
                   <!--figure out how to make red outline disappear / please fill out field section, tailwind doesn't remove it when the box is filled-->
@@ -70,7 +70,7 @@
                       type="text"
                       placeholder="604-123-4567"
                     />
-                    <p class="text-red-500 text-xs italic">Please fill out this field.</p>
+                   <!-- <p class="text-red-500 text-xs italic">Please fill out this field.</p>-->
                   </div>
                 </div>
                 <!--revised button yay!-->
