removing red border

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
                       First Name
                     </label>
                     <input
-                      class="appearance-none block w-full bg-gray-200 text-gray-700 border border-red-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
+                      class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
                       
                       name="name"
                       type="text"
@@ -65,7 +65,7 @@
                       Phone Number
                     </label>
                     <input
-                      class="appearance-none block w-full bg-gray-200 text-gray-700 border border-red-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
+                      class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
                       name="smsNumber"
                       type="text"
                       placeholder="604-123-4567"
